이미지폴더 이동

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="images/llm-favicon/favicon-96x96.png"
+      href="/images/llm-favicon/favicon-96x96.png"
       sizes="96x96"
     />
     <link
@@ -47,7 +47,7 @@
         transform: translate(-50%, -50%);
       "
     >
-      <img src="images/img.png" alt="img" style="width: 400px" />
+      <img src="/images/img.png" alt="img" style="width: 400px" />
       <h1>LLM AGENCY</h1>
     </div>
     <button class="wave-reveal access">ACCESS ►</button>
