--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       name="keywords"
       content="LLM AGENCY, LLM, AI, agency, automation, chatbot, web development"
     />
-    <link rel="canonical" href="https://너도메인주소.com/" />
+    <link rel="canonical" href="https://llmagency.vercel.app/" />
     <!-- favicon -->
     <link
       rel="icon"
