--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="LLM AGENCY — AI/LLM 기반 크리에이티브 & 개발 에이전시. 자동화, 챗봇, 프로덕트 빌드."
     />
+    <meta name="robots" content="index, follow" />
     <meta
       name="keywords"
       content="LLM AGENCY, LLM, AI, agency, automation, chatbot, web development"
