add robots.txt and open graph meta

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,18 @@
     <meta name="robots" content="index, follow" />
     <meta
       name="keywords"
-      content="LLM AGENCY, LLM, AI, agency, automation, chatbot, web development"
+      content="LLM AGENCY, LLM, AI, agency, automation, chatbot, web development, 엘엘엠 에이전시, LLM 에이전시"
     />
     <link rel="canonical" href="https://llmagency.vercel.app/" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="LLM AGENCY" />
+    <meta
+      property="og:description"
+      content="AI·LLM 기반 크리에이티브 & 개발 에이전시. 자동화, 챗봇, 프로덕트 빌드."
+    />
+    <meta property="og:url" content="https://llm-agency.vercel.app/" />
+    <meta property="og:image" content="https://llm-agency.vercel.app/og.png" />
     <!-- favicon -->
     <link
       rel="icon"
@@ -52,6 +61,7 @@
       <h1>LLM AGENCY</h1>
     </div>
     <button class="wave-reveal access">ACCESS ►</button>
+    <p style="display: none">엘엘엠 에이전시 LLM 에이전시</p>
     <!-- 로그인모달 -->
     <div class="modal">
       <div class="modal-box">
