--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
     />
     <meta property="og:url" content="https://llm-agency.vercel.app/" />
     <meta property="og:image" content="https://llm-agency.vercel.app/og.png" />
+    <!-- naver -->
+    <meta
+      name="naver-site-verification"
+      content="ea235cf966260022afe953bb709bb99586e32e70"
+    />
+
     <!-- favicon -->
     <link
       rel="icon"
