--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- SEO 기본 -->
     <meta
       name="description"
-      content="LLM AGENCY — AI/LLM 기반 크리에이티브 & 개발 에이전시. 자동화, 챗봇, 프로덕트 빌드."
+      content="엘엘엠 에이전시 llm agency LLM AGENCY. AI·LLM 기반 자동화, 챗봇, 웹·프로덕트 빌드를 제공합니다."
     />
     <meta name="robots" content="index, follow" />
     <meta
